--- a/test/amd.html
+++ b/test/amd.html
@@ -6,19 +6,32 @@
   <script src="../src/q.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" charset="utf-8">
   // require(['amd', 'amd2'], function(amd, amd2){
-  //         alert(amd);
-  //         alert(amd2.a + amd2.b);
-  //       })
+  //             alert(amd);
+  //             alert(amd2.a + amd2.b);
+  //           })
   </script>
   <script type="text/javascript" charset="utf-8">
   // require('amd3', function(amd3){
-  //         alert(amd3)
-  //       })
+  //           alert(amd3)
+  //         })
   </script>
   <script type="text/javascript" charset="utf-8">
-  require('amd4', function(amd4){
-      alert(amd4.a)
-    })
+  // require('amd4', function(amd4){
+  //     alert(amd4.a)
+  //   })
+  </script>
+  <script type="text/javascript" charset="utf-8">
+  // require('amd5', function(amd5){
+  //     alert(amd5)
+  //   })
+  </script>
+  <script type="text/javascript" charset="utf-8">
+  require('amd7', function(amd7){
+      alert('amd7')
+      })
+    require('amd8', function(amd8){
+              alert(amd8)
+              })
   </script>
 </head>
 <body>
